--- a/src/template.html
+++ b/src/template.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo-List App</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous"/>
 </head>
 <body>
-  <div class="todo-list-container">
-    
+  <div class="wrapper">
+    <header>Today's To Do</header>
+    <hr>
+    <div class="inputField">
+      <input type="text" id="input-box" placeholder="Add to your list ...." class="no-outline">
+    </div>
+    <hr>
+    <ul class="todoList">
+  
+    </ul>
+    <div class="footer">
+      <span class="clear-all-completed">Clear All Completed</span>
+    </div>
   </div>
   
   <script type="module" src="./index.js"></script>
